templates/rt_template.yaml
---
# Source: rt/charts/nginx/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-nginx
  labels:
    app: nginx
    chart: nginx-0.1.1
    release: release-name
    heritage: Helm
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
    - name: https
      protocol: TCP
      port: 443
      targetPort: https
  selector:
    app: nginx
    release: release-name
  type: ClusterIP
---
# Source: rt/charts/postgresql/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-postgresql
  labels:
    app: postgresql
    chart: postgresql-0.2.3
    release: "release-name"
    heritage: "Helm"
spec:
  type: ClusterIP
  ports:
  - name: postgresql
    port: 5432
    targetPort: postgresql
  selector:
    app: postgresql
    release: "release-name"
---
# Source: rt/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-rt
  labels:
    app: rt
    chart: rt-0.1.1
    release: release-name
    heritage: Helm
spec:
  ports:
    - name: request-tracker
      port: 9000
      targetPort: request-tracker
  selector:
    app: rt
    release: release-name
  type: ClusterIP
---
# Source: rt/charts/nginx/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  release-name-nginx
  labels:
    app: nginx
    chart: nginx-0.1.1
    release: release-name
    heritage: Helm
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: nginx
      release: release-name
  template:
    metadata: #todo: add cm checksums as annotation
      labels:
        app: nginx
        release: release-name
    spec:
      containers:
        - name: nginx
          image: "firefart/requesttracker:nginx-nightly-20230710"
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: certsworkingdir
              mountPath: /certs/
            - name: scriptsworkingdir
              mountPath: /docker-entrypoint.d/
            - name: confworkingdir
              mountPath: /etc/nginx/conf.d/
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
            - name: https
              containerPort: 443
              protocol: TCP
      restartPolicy: Always
      volumes:
        - name: certs
          secret:
            secretName: release-name-nginx-certs
        - name: certsworkingdir
          emptyDir: {}
        - name: scripts
          configMap:
            name: release-name-nginx-scripts
        - name: scriptsworkingdir
          emptyDir: {}
        - name: conf
          secret:
            secretName: release-name-nginx-conf
        - name: confworkingdir
          emptyDir: {}
---
# Source: rt/templates/cron-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  cron
  labels:
    app: rt
    chart: rt-0.1.1
    release: release-name
    heritage: Helm
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: rt
      release: release-name
  template:
    metadata: #todo: add cm checksums as annotation
      labels:
        app: rt
        release: release-name
    spec:
      containers:
        - name: rt
          image: "firefart/requesttracker:5.0.4"
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: data
              mountPath: /opt/rt5/var/data/RT-Shredder/
              subPath: shredder
            - name: data
              mountPath: /cron
              subPath: cron
            - name: data
              mountPath: /getmail
              subPath: getmail
            - name: siteconfigworkingdir
              mountPath: /custom/siteconfig
            - name: msmtprcworkingdir
              mountPath: /custom/msmtp
            - name: msmtpworkingdir
              mountPath: /msmtp/
            - name: getmailworkingdir
              mountPath: /getmail/config
            - name: certsworkingdir
              mountPath: /getmail/certs
            - name: gpgworkingdir
              mountPath: /opt/rt5/var/data/gpg/
            - name: crlsworkingdir
              mountPath: /opt/rt5/var/data/gpg/crls.d
            - name: crontabworkingdir
              mountPath: /etc/cron.d/
            - name: shredderworkingdir
              mountPath: /custom/shredder
          securityContext:
            runAsUser: 0
          lifecycle:
            postStart:
              exec:
                command: ["/bin/sh", "-c", "cp /custom/siteconfig/RT_SiteConfig.pm /opt/rt5/etc/ ; cp /custom/msmtp/msmtp.conf /etc/msmtprc ; cp /custom/shredder/* /opt/rt5/var/data/RT-Shredder/ ; chmod -R rt 0600 /opt/rt5/var/data/gpg/ ; cp /usr/share/zoneinfo/America/Sao_Paulo /etc/localtime ; chmod 777 -R /getmail"]
      restartPolicy: Always
      volumes:
        - name: siteconfig
          secret:
            secretName: release-name-rt-siteconfig
        - name: siteconfigworkingdir
          emptyDir: {}
        - name: msmtprc
          secret:
            secretName: release-name-rt-msmtp
        - name: msmtprcworkingdir
          emptyDir: {}
        - name: msmtp
          secret:
            secretName: release-name-rt-msmtp
        - name: msmtpworkingdir
          emptyDir: {}
        - name: getmail
          secret:
            secretName: release-name-rt-getmail
        - name: getmailworkingdir
          emptyDir: {}
        - name: certs
          secret:
            secretName: tls-rt-ingress
        - name: certsworkingdir
          emptyDir: {}
        - name: gpg
          secret:
            secretName: release-name-rt-gpg
        - name: gpgworkingdir
          emptyDir: {}
        - name: crls
          configMap:
            name: release-name-rt-crls
        - name: crlsworkingdir
          emptyDir: {}
        - name: shredder
          secret:
            secretName: release-name-rt-shredder
        - name: shredderworkingdir
          emptyDir: {}
        - name: scripts
          secret:
            secretName: release-name-rt-scripts
        - name: scriptsworkingdir
          emptyDir: {}
        - name: crontab
          configMap:
            name: cron
        - name: crontabworkingdir
          emptyDir: {}
        - name: data
          persistentVolumeClaim:
            claimName: cron
---
# Source: rt/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  release-name-rt-rt
  labels:
    app: rt
    chart: rt-0.1.1
    release: release-name
    heritage: Helm
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: rt
      release: release-name
  template:
    metadata: #todo: add cm checksums as annotation
      labels:
        app: rt
        release: release-name
    spec:
      nodeName: node5
      containers:
        - name: rt
          image: "firefart/requesttracker:5.0.4"
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: data
              mountPath: /opt/rt5/var/data/RT-Shredder/
            - name: siteconfigworkingdir
              mountPath: /custom/siteconfig/
            - name: msmtprcworkingdir
              mountPath: /custom/msmtp/
            - name: msmtpworkingdir
              mountPath: /msmtp/
            - name: getmailworkingdir
              mountPath: /getmail/
            - name: certsworkingdir
              mountPath: /getmail/certs
            - name: gpgworkingdir
              mountPath: /opt/rt5/var/data/gpg/
            - name: crlsworkingdir
              mountPath: /opt/rt5/var/data/gpg/crls.d/
            - name: shredderworkingdir
              mountPath: /custom/shredder/
            - name: scriptsworkingdir
              mountPath: /custom/postgres/
          ports:
            - name: request-tracker
              containerPort: 9000
          securityContext:
            runAsUser: 0
          lifecycle:
            postStart:
              exec:
                command: ["/bin/sh", "-c", "cp /custom/siteconfig/RT_SiteConfig.pm /opt/rt5/etc/ ; cp /custom/msmtp/msmtp.conf /etc/msmtprc ; cp /custom/shredder/* /opt/rt5/var/data/RT-Shredder/ ; chmod -R rt 0600 /opt/rt5/var/data/gpg/ ; cp /usr/share/zoneinfo/America/Sao_Paulo /etc/localtime"]
      restartPolicy: Always
      volumes:
        - name: siteconfig
          secret:
            secretName: release-name-rt-siteconfig
        - name: siteconfigworkingdir
          emptyDir: {}
        - name: msmtprc
          secret:
            secretName: release-name-rt-msmtp
        - name: msmtprcworkingdir
          emptyDir: {}
        - name: msmtp
          secret:
            secretName: release-name-rt-msmtp
        - name: msmtpworkingdir
          emptyDir: {}
        - name: getmail
          secret:
            secretName: release-name-rt-getmail
        - name: getmailworkingdir
          emptyDir: {}
        - name: certs
          secret:
            secretName: tls-rt-ingress
        - name: certsworkingdir
          emptyDir: {}
        - name: gpg
          secret:
            secretName: release-name-rt-gpg
        - name: gpgworkingdir
          emptyDir: {}
        - name: crls
          configMap:
            name: release-name-rt-crls
        - name: crlsworkingdir
          emptyDir: {}
        - name: shredder
          secret:
            secretName: release-name-rt-shredder
        - name: shredderworkingdir
          emptyDir: {}
        - name: scripts
          secret:
            secretName: release-name-rt-scripts
        - name: scriptsworkingdir
          emptyDir: {}
        - name: data
          persistentVolumeClaim:
            claimName: release-name-rt
---
# Source: rt/charts/postgresql/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: release-name-postgresql
  labels:
    app: postgresql
    chart: postgresql-0.2.3
    release: "release-name"
    heritage: "Helm"
spec:
  serviceName: release-name-postgresql-headless
  replicas: 1
  selector:
    matchLabels:
      app: postgresql
      release: "release-name"
  template:
    metadata:
      name: release-name-postgresql
      labels:
        app: "postgresql"
        chart: postgresql-0.2.3
        release: "release-name"
        heritage: "Helm"
    spec:
      containers:
        - name: release-name-postgresql
          image: "postgres:13.11-bullseye"
          imagePullPolicy: "IfNotPresent"
          ports:
            - name: postgresql
              containerPort: 5432
          livenessProbe:
            null
          readinessProbe:
            null
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
              subPath: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: release-name-postgresql
---
# Source: rt/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rt
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    cert-manager.io/cluster-issuer: selfsigned-cluster-issuer
spec:
  ingressClassName: nginx
  tls:
  - hosts: 
    - rt.csic.ufpa.br
    secretName: tls-rt-ingress
  rules:
    - host: rt.csic.ufpa.br
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: rt-nginx
              port: 
                number: 80
---
# Source: rt/charts/postgresql/templates/configmap.yaml
#
# A ConfigMap spec for pgldap-config.yaml 
# /var/lib/pglda-config.yaml
#
